Extending app to draw a pie chart

--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='../../env/src/css/font-awesome.min.css'>
+    <link rel='stylesheet' type='text/css' href='../../css/font-awesome.css'>
     <link rel='stylesheet' type='text/css' href='./app.css'>
   </head>
   <body>
@@ -10,11 +10,33 @@
         <span id='status'>Running Boa Query</span>
       </div>
 
-      <div style='text-align: left;' id='content'>
-      <p>
-        Number of null check fixing revisions : <span id='output' style="color:blue;font-weight:bold"></span>
-      </p>
-    </div>
+      <div id='content' hidden="hidden">
+        <h3 id='app-title'> Number of Results </h3>
+        <div id='output'>
+          <canvas id="chart-output"> </canvas>
+        </div>
+        <div id='controls'>
+          <form>
+            <label for="numToShow">Number of projects shown</label>
+            <select id='numToShow'>
+            </select>
+          </form>
+        </div>
+        <div id='table-output'>
+          <table style="">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Details</th>
+                <th>#</th>
+              </tr>
+            </thead>
+            <tbody id='table-output-body'>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
     <script src="../../shared/jquery.min.js"></script>
     <script src="../../shared/chart.min.js"></script>
